--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: 'Baskervville', sans-serif;
+  font-family: 'Crimson+Pro', sans-serif;
   font-weight: 500;
   margin-left: auto;
 	margin-right: auto;
@@ -13,7 +13,7 @@ body {
 .menu {
   background-color: #333;
   overflow: hidden;
-  font-family: 'Baskervville';
+  font-family: 'Crimson+Pro';
   margin:0;
   padding: 0;
 }
@@ -47,16 +47,16 @@ body {
 
 p, ul {
 	/* font-size: 15px; */
-	font-family: "Baskervville";
+	font-family: "Crimson+Pro";
 }
 
 h1, h4 { 
-	font-family:  'Baskervville', monospace;
+	font-family:  'Crimson+Pro', monospace;
     font-weight: bold;
 }
 
 table, th, td {
-	font-family: 'Baskervville', monospace;
+	font-family: 'Crimson+Pro', monospace;
 	border-style: solid;
 	border-color: black;
 	border-width: thin;
