--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 
 body {
-  font-family: 'Crimson+Pro', sans-serif;
+  font-family: 'Crimson Pro', sans-serif;
   font-weight: 500;
   margin-left: auto;
 	margin-right: auto;
-
+  color: rgb(31, 31, 31);
 	padding: 20px;
   background-color: #ffe6bc;
+  /* background-color: ivory; */
 }
 
 
 .menu {
-  background-color: #333;
+  background-color: rgb(0, 0, 77);
   overflow: hidden;
-  font-family: 'Crimson+Pro';
+  font-family: 'Crimson Pro', sans-serif;
+  color: white;
   margin:0;
   padding: 0;
 }
@@ -34,31 +36,31 @@ body {
 } 
 /* Change the color of links on hover */
 .menu a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: darkgoldenrod;
+  color: white;
 }
 
 /* Add a color to the active/current link */
 .menu a.active {
   background-color: goldenrod;
-  color: black;
+  color: rgb(31, 31, 31);
 }
 
 
 p, ul {
 	/* font-size: 15px; */
-	font-family: "Crimson+Pro";
+	font-family: "Crimson Pro", sans-serif;
 }
 
 h1, h4 { 
-	font-family:  'Crimson+Pro', monospace;
+	font-family:  'Crimson Pro', sans-serif;
     font-weight: bold;
 }
 
 table, th, td {
-	font-family: 'Crimson+Pro', monospace;
+	font-family: 'Crimson Pro', sans-serif;
 	border-style: solid;
-	border-color: black;
+	border-color: rgb(31, 31, 31);
 	border-width: thin;
 }
 
